# sparkle-cache-postgres

./: .env  Cargo.toml  LICENSE.md  README.md  sqlx-data.json
sql/: delete_channel.sql  delete_channel_permission_overwrites.sql  delete_embed.sql  delete_embed_fields.sql  delete_emoji.sql  delete_guild.sql  delete_guild_channels.sql  delete_guild_emojis.sql  delete_guild_members.sql  delete_guild_presences.sql  delete_guild_roles.sql  delete_guild_stage_instances.sql  delete_guild_stickers.sql  delete_member.sql  delete_member_roles.sql  delete_message.sql  delete_message_attachments.sql  delete_message_reactions.sql  delete_message_reactions_by_emoji.sql  delete_message_stickers.sql  delete_presence.sql  delete_reaction.sql  delete_role.sql  delete_stage_instance.sql  delete_user_activities.sql  init.sql  insert_role.sql  select_attachments.sql  select_channel.sql  select_channel_messages.sql  select_current_user.sql  select_embed_fields.sql  select_emoji.sql  select_guild.sql  select_guild_channels.sql  select_guild_emojis.sql  select_guild_members.sql  select_guild_roles.sql  select_guild_stickers.sql  select_member.sql  (+30 more)
src/: backend.rs  cache.rs  lib.rs  model.rs  tests.rs
src/model/: activity.rs  attachment.rs  channel.rs  current_user.rs  embed.rs  emoji.rs  guild.rs  member.rs  message.rs  permission_overwrite.rs  presence.rs  reaction.rs  role.rs  stage_instance.rs  sticker.rs
