[package]
name = "sparkle-cache-postgres"
version = "0.14.1"
authors = ["lara <laralove143@icloud.com>"]
edition = "2021"
description = "Discord cache implementation using PostgresSQL for the Twilight ecosystem"
repository = "https://github.com/laralove143/sparkle-cache-postgres/"
license = "ISC"
keywords = ["discord", "discord-api", "twilight"]
categories = ["api-bindings", "asynchronous", "caching"]

[features]
default = ["rustls"]
rustls = ["sqlx/runtime-tokio-rustls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]

[dev-dependencies]
tokio = { version = "1.21", features = ["macros"] }
anyhow = { version = "1.0" }
sparkle-cache = { version = "0.14", features = ["tests"] }

[dependencies]
sparkle-cache = "0.14"
sqlx = { version = "0.6", features = ["postgres", "macros", "offline"] }
twilight-model = "0.14"
async-trait = "0.1"